fixed spacing b/w footer text and bottom of page

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -16,7 +16,7 @@ body {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 80px;
+  height: 95px;
   background-color: rgba(0,0,0,0.5);
   font-family: 'Amatic SC', cursive;
   font-size: 17px;
